[package]
name = "dormarch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = "3.0.0-rc.4"
osshkeys = "0.5.2"
futures = "0.3.18"
